# gofile-dl

./: .bandit  .bandit.yml  .dockerignore  .env.example  .flake8  .hadolint.yaml  .markdownlint.json  .markdownlint.yaml  .mega-linter.yaml  .mypy.ini  .ruff.toml  CHANGELOG.md  Dockerfile  FIX_DOCUMENTATION.md  PREMIUM_SUPPORT.md  README.md  app.py  config.yml  docker-compose.yml  errors.py  investigate_api.py  py.typed  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  test_api_headers.py  test_api_quick.py  test_fix.py  test_gofile_api.py  test_workarounds.py
.github/: renovate.json
.github/workflows/: build.yaml  lint.yaml  prettier.yaml  release.yaml  renovate.yaml  reusable_docker-build-and-push.yaml  test.yaml
app/models/: task.py
app/services/: notification.py
templates/: dashboard.html  index.html
tests/: test_app.py  test_app_complete.py  test_app_extended.py  test_app_simple.py  test_basic.py  test_errors.py  test_errors_simple.py  test_gofile.py  test_run.py  test_run_extended.py  test_run_simple.py
